--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.1",
     "bcrypt": "^5.1.0",
     "csv-parse": "^5.3.6",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
