--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/jsonwebtoken": "^9.0.1",
     "bcrypt": "^5.1.0",
     "csv-parse": "^5.3.6",
+    "dayjs": "^1.11.7",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.0",
