--- a/package.json
+++ b/package.json
@@ -11,20 +11,26 @@
   },
   "dependencies": {
     "@types/jsonwebtoken": "^9.0.1",
+    "aws-sdk": "^2.1373.0",
     "bcrypt": "^5.1.0",
+    "class-transformer": "^0.5.1",
     "csv-parse": "^5.3.6",
     "dayjs": "^1.11.7",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "handlebars": "^4.7.7",
     "jsonwebtoken": "^9.0.0",
+    "mime": "^3.0.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.1",
     "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
+    "supertest": "^6.3.3",
     "swagger-ui-express": "^4.6.2",
     "tsyringe": "^4.7.0",
     "typeorm": "0.2.45",
-    "uuid": "^9.0.0",
-    "supertest": "^6.3.3"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
