--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "aws-sdk": "^2.1373.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
+    "cors": "^2.8.5",
     "csv-parse": "^5.3.6",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
@@ -42,6 +43,7 @@
     "@babel/preset-env": "^7.21.5",
     "@babel/preset-typescript": "^7.21.5",
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@types/jest": "^29.5.0",
     "@types/multer": "^1.4.7",
