--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
     "pg": "^8.10.0",
+    "rate-limiter-flexible": "^2.4.1",
+    "redis": "^4.6.6",
     "reflect-metadata": "^0.1.13",
     "supertest": "^6.3.3",
     "swagger-ui-express": "^4.6.2",
@@ -47,6 +49,7 @@
     "@types/express": "^4.17.15",
     "@types/jest": "^29.5.0",
     "@types/multer": "^1.4.7",
+    "@types/redis": "^4.0.11",
     "@types/supertest": "^2.0.12",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^9.0.0",
