--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "seed:admin": "ts-node-dev src/shared/infra/typeorm/seed/admin.ts"
   },
   "dependencies": {
+    "@sentry/node": "^7.52.1",
     "@types/jsonwebtoken": "^9.0.1",
     "aws-sdk": "^2.1373.0",
     "bcrypt": "^5.1.0",
