--- a/ormconfig.example.json
+++ b/ormconfig.example.json
@@ -2,9 +2,9 @@
   "type": "postgres",
   "port": 5432,
   "host": "localhost",
-  "username": "John Doe",
-  "password": "strong_password",
-  "database": "database_name",
+  "username": "docker",
+  "password": "ignite",
+  "database": "rentx",
   "migrations": ["./src/shared/infra/typeorm/migrations/*.ts"],
   "entities": ["./src/modules/**/entities/*.ts"],
   "cli": {
